v0.80 - Ongoing
===============

- Added 'cmd_tswait' to wait for a touch event
- Removed 'drivers/nfc/pn532' until proper drivers
  can be written
- Added 'cmd_text' and 'cmd_textw' to the CLI to
  render text on the LCD and get the width in
  pixels of the specified text before rendering.

v0.70 - 18 Dec 2010
===================

- Added 'calibrate' and 'gettext' commands to the CLI
- Added a dialogue box for the TFT LCD/Touchscreen
  to input alpha-numeric data and return the
  results as a string ('drivers/lcd/tft/dialogues/*')
- Added touch screen calibration code and UI
  ('drivers/lcd/tft/touchscreen.c')
- Fixed a bug in ILI9325.c to make sure that the LCD
  is reset during initialisation
- ** IMPORTANT ** Changed 'core/i2c/*' to fix a number
  of bugs (thanks Rob65!) ... though this means all
  i2c peripherals and drivers will need to be tested.
- Added 'colorscheme_t' to drawing.h to try to use a
  standard color palette across GUI controls and make
  it easy to change later.  Currently only the button
  and progress bar make use of this.
- Added 'lcdBacklightOn()' and 'lcdBacklightOff()' to
  lcd.h
- Added 'CFG_TFTLCD_TS_THRESHOLD' to projectconfig.h
  to configure touch-screen sensitivity when waiting
  for a touch event
- Modified 'core/gpio/gpio.c' to reduce the compiled code
  size. Repetitive switches where only the registers
  change were modified to use temporary registers and
  execute the code only once.
- Added the source and binaries for TheDotFactory to
  'tools/dotfactory' for convenience sake. See:
  http://www.pavius.net/downloads/tools/53-the-dot-factory
- Removed 'drivers/lcd/tft/tscalibration.c' and moved
  the relevant code to touchscreen.c
- Removed the imgconv tool from 'tools/imgconv' (see
  point below for more information)
- Removed the previous custom image code and replaced
  it with 24-bit Windows bitmap files.  This is a bit
  slower (since 24-bit data needs to be converted to