@@ -23,7 +23,7 @@ VPATH += project
 OBJS += commands.o
 
 VPATH += project/commands
-OBJS += cmd_chibi_addr.o cmd_chibi_tx.o cmd_deepsleep.o cmd_hello.o
+OBJS += cmd_chibi_addr.o cmd_chibi_tx.o cmd_hello.o
 OBJS += cmd_i2ceeprom_read.o cmd_i2ceeprom_write.o cmd_lm75b_gettemp.o
 OBJS += cmd_sysinfo.o cmd_sd_dir.o cmd_tswait.o
 
