@@ -36,6 +36,7 @@ extern uint32_t USB_EndPointHalt;
 extern uint32_t USB_EndPointStall;
 extern uint8_t  USB_AltSetting[USB_IF_NUM];
 
+
 /* USB Endpoint 0 Buffer */
 extern uint8_t  EP0Buf[USB_MAX_PACKET0];
 
